media markup using macros

--- a/app/projects/polyop.html
+++ b/app/projects/polyop.html
@@ -68,21 +68,43 @@
 
 <p>I was using Codepen for a lot of these experiments, the ability to quickly “fork” a pen was nice and it also gave me an easy way to share what I was doing. A music producer friend of mine, Jack Driscoll, liked what I was making and proposed we collaborate on something that reacts to music. A year later and what we’ve created is quite something.</p>
 
+
 <figure am-ArticleMedia>
-	<div am-VidStretch>
-		<iframe  src="https://player.vimeo.com/video/147780663?api=1&player_id=vimeoplayer&color=12F4FF" id="vimeoplayer" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-	</div>
-	<figcaption am-ArticleMedia-Caption>Polyop promo video</figcaption>
+
+	
+		
+		<div am-VidStretch>
+			<iframe  src="https://player.vimeo.com/video/147780663?api=1&player_id=vimeoplayer&color=12F4FF" id="vimeoplayer" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+		</div>
+
+	
+	
+
+	<figcaption am-ArticleMedia-Caption>Polyop promo video.</figcaption>
 </figure>
+
 
 <p>Polyop is the name of the audio visual duo we have formed. The visuals are being generated real-time, the whole thing running inside Google Chrome. The software is currently in Beta mode and we like to call it “Polygen”.</p>
 
 <h2>It’s reactive!</h2>
 
-<figure am-ArticleMedia="first">
-	<img src="/images/gifs/polygen_sprite.gif" alt="Animated cartoon face">
-	<figcaption am-ArticleMedia-Caption>2D sprites cycle in time with the beat</figcaption>
+
+<figure am-ArticleMedia>
+
+	
+
+		
+
+			<img src="/images/gifs/polygen_sprite.gif" alt="Animated cartoon face">
+
+		
+
+	
+	
+
+	<figcaption am-ArticleMedia-Caption>2D sprites cycle in time with the beat.</figcaption>
 </figure>
+
 
 
 <p>The Polygen visual system is reactive in three ways:</p>
@@ -96,10 +118,23 @@
 
 <h2>Three.js</h2>
 
-<figure am-ArticleMedia="first">
-	<img src="/images/gifs/polygen_rgb.gif" alt="Icosahedron with an RGB effect applied">
-	<figcaption am-ArticleMedia-Caption>The “RGB Split” pixel shader being applied to a scene</figcaption>
+
+<figure am-ArticleMedia>
+
+	
+
+		
+
+			<img src="/images/gifs/polygen_rgb.gif" alt="Icosahedron with an RGB effect applied">
+
+		
+
+	
+	
+
+	<figcaption am-ArticleMedia-Caption>The “RGB Split” pixel shader being applied to a scene.</figcaption>
 </figure>
+
 
 <p>At the heart of Polygen is Three.js, an awesome Javascript library that makes working with WebGL (How you make 3D graphics with canvas) a little more manageable. One huge advantage to using Three.js is how easy it allows you to implement fun effects through the use of pixel shaders, such as the super cool looking “RGB Split” effect.</p>
 
@@ -115,9 +150,22 @@
 <p>Amazingly, Chrome now has the ability to work with MIDI instruments. I assume the primary idea behind this will be to allow developers to write all sorts of web based audio apps allowing musicians to plug in a MIDI keyboard (or whatever else). The Polygen system makes use of this functionality, allowing for scenes and effects to be controlled by hardware.</p>
 
 <h2>Keeping the community (and my sanity) in mind</h2>
-<figure am-ArticleMedia="first">
-	<img src="/images/gifs/polygen_scenes.gif" alt="Multiple still shots from the Polygen engine">
-	<figcaption am-ArticleMedia-Caption>Eventually, anyone could contribute an effect with a single file</figcaption>
+
+
+<figure am-ArticleMedia>
+
+	
+
+		
+
+			<img src="/images/gifs/polygen_scenes.gif" alt="Multiple still shots from the Polygen engine">
+
+		
+
+	
+	
+
+	<figcaption am-ArticleMedia-Caption>Eventually, anyone could contribute an effect with a single file.</figcaption>
 </figure>
 
 
