--- a/app/projects/santa-monica.html
+++ b/app/projects/santa-monica.html
@@ -60,8 +60,19 @@
 
 <h2>Greensock is amazing</h2>
 
+
 <figure am-ArticleMedia>
-	<a am-a="plain" href="http://santamonicawellbeing.co.uk/"><img src="/images/gifs/santa_monica.gif" alt="Santa Monica website with animation"></a>
+
+	
+
+		<a am-a="plain" href="http://santamonicawellbeing.co.uk/">
+
+			<img src="/images/gifs/santa_monica.gif" alt="Santa Monica website with animation">
+
+		</a>
+
+	
+	
 
 	<figcaption am-ArticleMedia-Caption>Greensock makes it simple to fly elements about.</figcaption>
 </figure>
@@ -74,11 +85,25 @@
 
 <div am-Row>
 	<div am-Col="m4">
-		<figure am-ArticleMedia>
-			<img src="/images/graphics/sm_phone.gif" alt="Santa Monica website inside a mobile">
+
 		
-			<figcaption am-ArticleMedia-Caption>The website becomes simpler on a smaller screen.</figcaption>
-		</figure>
+<figure am-ArticleMedia>
+
+	
+
+		
+
+			<img src="/images/graphics/sm_phone.gif" alt="Santa Monica website inside a mobile">
+
+		
+
+	
+	
+
+	<figcaption am-ArticleMedia-Caption>The website becomes simpler on a smaller screen.</figcaption>
+</figure>
+
+		
 	</div>
 	<div am-Col="m8 l">
 
