--- a/app/projects/saa.html
+++ b/app/projects/saa.html
@@ -64,35 +64,60 @@
 
 
 <h2>D3.js</h2>
+
+
 <figure am-ArticleMedia>
-	<a am-a="plain" href="http://flysaatrade.com/products/routes"><img src="/images/gifs/saa_map.gif" alt="Interactive map"></a>
+
+	
+
+		<a am-a="plain" href="http://flysaatrade.com/products/routes">
+
+			<img src="/images/gifs/saa_map.gif" alt="Interactive map">
+
+		</a>
+
+	
+	
 
 	<figcaption am-ArticleMedia-Caption>The map I created showed how all of the airports were connected. <a href="http://flysaatrade.com/products/routes">See live version</a>.</figcaption>
 </figure>
 
 
-	<p>D3 is a Javascript library that is well known for being helpful when visualising data. Graphs are often what spring to mind with D3, but it also handles map data very well. The map I built for South African Airways was not created from a image drawn in illustrator or any other graphical program. It’s generated from real world cartographical data, using D3. The process goes something like this:</p>
-	
-	<ol>
-		<li>Download map data for the whole world from <a href="http://www.naturalearthdata.com/">Natural Earth</a>. This data includes a crazy amount of detail with locations for cities, landmarks and airports. </li>
-		<li>Run a few commands to filter out all the countries you don’t want</li>
-		<li>Run a few more commands to keep only the map features you want (airports, in this case)</li>
-		<li>Load this data to the page and draw a map, using the power of D3</li>
-	</ol>
-	
-	<p>What’s neat about using real world data is that it’s completely accurate, you’re dealing with coordinates, not pixels. All the airports are in exactly the right place without any guesswork. </p>
-	
-	<p>Another advantage to having the data originally in text form is that it’s readily available to use when the visual element isn’t suitable. For instance, the mobile version of this page is simply an expandable table of the data. </p>
-	
-	<p>The map renders as a vector, so it also has the bonus of looking super sharp on any screen at any size, with some fun animations to boot.</p>
 
-	<h2>Giving power to the client</h2>
 
-	<figure am-ArticleMedia>
-		<img src="/images/graphics/saa_sheet.gif" alt="Spreadsheet and map">
+<p>D3 is a Javascript library that is well known for being helpful when visualising data. Graphs are often what spring to mind with D3, but it also handles map data very well. The map I built for South African Airways was not created from a image drawn in illustrator or any other graphical program. It’s generated from real world cartographical data, using D3. The process goes something like this:</p>
+
+<ol>
+	<li>Download map data for the whole world from <a href="http://www.naturalearthdata.com/">Natural Earth</a>. This data includes a crazy amount of detail with locations for cities, landmarks and airports. </li>
+	<li>Run a few commands to filter out all the countries you don’t want</li>
+	<li>Run a few more commands to keep only the map features you want (airports, in this case)</li>
+	<li>Load this data to the page and draw a map, using the power of D3</li>
+</ol>
+
+<p>What’s neat about using real world data is that it’s completely accurate, you’re dealing with coordinates, not pixels. All the airports are in exactly the right place without any guesswork. </p>
+
+<p>Another advantage to having the data originally in text form is that it’s readily available to use when the visual element isn’t suitable. For instance, the mobile version of this page is simply an expandable table of the data. </p>
+
+<p>The map renders as a vector, so it also has the bonus of looking super sharp on any screen at any size, with some fun animations to boot.</p>
+
+<h2>Giving power to the client</h2>
+
+
+<figure am-ArticleMedia>
+
 	
-		<figcaption am-ArticleMedia-Caption>A simple spreadsheet turns into the fully featured map</figcaption>
-	</figure>
+
+		
+
+			<img src="/images/graphics/saa_sheet.gif" alt="Spreadsheet and map">
+
+		
+
+	
+	
+
+	<figcaption am-ArticleMedia-Caption>A simple spreadsheet turns into the fully featured map.</figcaption>
+</figure>
 
 
 <p>Using this generative approach allowed the client to have control over their new shiny map, without having to use any specialist graphical software. The client simply uploads a spreadsheet of airport codes and the map is generated, with the airports and connections automatically in place.</p>
@@ -105,11 +130,24 @@
 			<h2>Let’s make a map!</h2>
 			 
 
+
 <figure am-ArticleMedia>
-	<img src="/images/gifs/all_maps.gif" alt="Selection of maps">
+
+	
+
+		
+
+			<img src="/images/gifs/all_maps.gif" alt="Selection of maps">
+
+		
+
+	
+	
 
 	<figcaption am-ArticleMedia-Caption>Maps I’ve made for clients such as Brand USA and Visit California.</figcaption>
 </figure>
+
+
 <p>I’ve made a bunch of interactive maps, for all sorts of clients. I’d love to  <a href="#contact" data-scrollto="#contact">have a chat with you</a> about that map you need making.</p>
 
 
