--- a/app/projects/saa.html
+++ b/app/projects/saa.html
@@ -177,7 +177,7 @@
 
 
 
-<div am-SiteFooter data-triEffect id="contact">
+<footer am-SiteFooter data-triEffect id="contact">
 	<canvas am-SiteFooter-Bg></canvas>
 	
 	<div am-SiteFooter-Inner>
@@ -205,8 +205,12 @@
 		
 
 	</div>
+
+	<div am-SiteFooter-Bottom>
+		Hosted with <a href="https://pages.github.com/">Github Pages</a>. Feel free to <a href="https://github.com/funwithtriangles/funwithtriangles.github.io/tree/dev">view the source</a>.
+	</div>
 	
-</div>
+</footer>
 
 <script src="/js/app.js" ></script>
 <script>
