--- a/app/projects/saa.html
+++ b/app/projects/saa.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8" />
 	
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> | Fun With Triangles</title>
-    <meta name="description" content="Alex Kempton works with Front-End web technologies.">
+    <title>Fun With Triangles</title>
+    <meta name="description" content="The portfolio of Alex Kempton, a designer that works with front-end web technologies.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="/js/modernizr.js"></script>
@@ -18,6 +18,8 @@
 
 
 	<link rel="stylesheet" href="/css/app.css" />
+
+	<meta property="og:image" content="http://funwithtriangles.net/images/graphics/share.gif" />
 
 </head>
 <body>
