--- a/app/index.html
+++ b/app/index.html
@@ -360,6 +360,24 @@
 	</div>
 </a>
 
+<a am-Strip="project" href="/projects/ea">
+	<div am-Row="middle">
+		<div am-Col="m6" am-Strip-Anim="1 left">
+			<div am-Strip-Decal>
+				<img src="/images/graphics/ea_compass.svg">
+			</div>
+			<img am-Strip-Cutout src="/images/cutouts/helicopter.png">
+		</div>
+
+		<div am-Col="m6">
+			<h2 am-txt="hug" am-Strip-Anim="2 right">A Responsibly Responsive Build</h2>
+			<p am-txt="lead" am-Strip-Anim="3 right">
+				I was the lead front-end designer on the build of a high end heli-skiing website.
+			</p>
+		</div>
+	</div>
+</a>
+
 
 <footer am-SiteFooter data-triEffect id="contact">
 	<canvas am-SiteFooter-Bg></canvas>
