--- a/app/projects/ea.html
+++ b/app/projects/ea.html
@@ -58,7 +58,7 @@
 		 
 
 <h2>Caring about performance</h2>
-<p>Elemental Adventure needed a complete overhaul of their image-heavy, content-rich site. It wasn’t enough to simply make a well designed responsive website that worked on multiple screen sizes. We went the extra mile to make sure the site performed well using responsive images while also implementing <a href="http://schema.org">Schema.org</a> so that all image metadata was properly indexed for search engines.
+<p><a href="http://eaheliskiing.com">Elemental Adventure</a> needed a complete overhaul of their image-heavy, content-rich site. It wasn’t enough to simply make a well designed responsive website that worked on multiple screen sizes. We went the extra mile to make sure the site performed well using responsive images while also implementing <a href="http://schema.org">Schema.org</a> so that all image metadata was properly indexed for search engines.
 </p>
 
 
