fixed broken link

--- a/app/projects/polyop.html
+++ b/app/projects/polyop.html
@@ -49,7 +49,7 @@
   		
 
   		
-		  <li am-FeatureList-Link>View project: <a href="http://polyup.uk">polyop.uk</a></li>
+		  <li am-FeatureList-Link>View project: <a href="http://polyop.uk">polyop.uk</a></li>
 		
 	</ul>
 
