Added Instatrip to work list

--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,10 @@
 		<h1>Hello</h1>
 		<p class="big-text">I'm Alex Kempton, a creative developer and artist working with new technologies to create 
 			interesting visual experiences.  I am the creator of <a href="https://github.com/nudibranchrecords/hedron/">Hedron</a>, visual artist for <a href="http://polyop.uk/">Polyop</a> and creative director at <a href="https://shop.nudibranchrecords.uk/">Nudibranch Records</a>. Previous 
-			clients include Gucci and Red Bull.</p>
+			clients include Gucci and Red&nbsp;Bull.</p>
 		<h3>Work I'm most proud of</h3>
 		<ul>
+			<li><a href="/instatrip">Instatrip</a>, a demo showcasing what's possible with face tracking on the web</li>
 			<li><a href="https://github.com/nudibranchrecords/hedron/">Hedron</a>, an app for creating real time visuals using WebGL</li>
 			<li><a href="https://www.instagram.com/ar/2985068164844778/">Leapwerm</a>, a rather trippy Instagram filter</li>
 			<li><a href="https://www.youtube.com/watch?v=d64dCoW9Y1c">Craig Lowe - Euphoria</a>, real time visuals made with WebGL</li>
