--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="theme-color" content="rgba(252, 102, 3)" />
+  <meta name="description" content="Portfolio of Alex Kempton, artist and creative developer." />
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+  <meta property="og:image" content="http://funwithtriangles.net/share.gif" />
+
   <script src="https://use.typekit.net/kbv3itz.js"></script>
   <script>
     try {
@@ -16,7 +19,8 @@
       });
     } catch (e) {}
   </script>
-  <title>React App</title>
+  <title>Fun With Triangles</title>
+
 </head>
 
 <body>
